Setup hadoop cluster

--- a/install/Dockerfile
+++ b/install/Dockerfile
@@ -3,10 +3,19 @@ FROM ubuntu
 WORKDIR /root
 
 RUN mkdir -p /root/install
-COPY *.sh /root/install/
+COPY ./scripts/*.sh /root/install/
+RUN mkdir -p /root/install/conf
+COPY ./conf /root/install/conf/
 
 RUN bash /root/install/setup-prerequisites.sh
+
+COPY ./ssh /home/hadoop/.ssh
+RUN cp /home/hadoop/.ssh/id_rsa.pub /home/hadoop/.ssh/authorized_keys
+RUN chmod 0600 /home/hadoop/.ssh/authorized_keys
+RUN chown -R hadoop:hadoop /home/hadoop/.ssh
+
+COPY ./archives/hadoop-2.9.1.tar.gz /home/hadoop/
+RUN mkdir /data && chmod a+w /data
 RUN bash /root/install/install-hbase.sh
 
 CMD bash /root/install/autorun.sh && /bin/bash
-
